tests/rosetta/out/Fortran/anonymous-recursion.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:39Z
program anonymous_recursion
  implicit none
    integer :: i
        character(len=100) :: s0
        character(len=100) :: s1
        character(len=100) :: s2
  main()
  contains
  recursive integer function fib(n) result(res)
    integer, intent(in) :: n
    if ((n < 2)) then
      res = n
      return
    end if
    res = (fib((n - 1)) + fib((n - 2)))
    return
  end function fib
  recursive integer function main() result(res)
    i = -1
    do while ((i <= 10))
      if ((i < 0)) then
        write(s0,'(G0)') i
        print *, trim('fib(' // s0) // ') returned error: negative n is forbidden'
      else
        write(s1,'(G0)') i
        write(s2,'(G0)') fib(i)
        print *, trim(trim('fib(' // s1) // ') = ') // s2
      end if
      i = (i + 1)
    end do
  end function main
end program anonymous_recursion
